Smaller viewport display fixed with overflow:hidden on Workflow and WorkflowRepo containers

--- a/client/src/components/dashboard/workflow-repo/workflow-repo.scss
+++ b/client/src/components/dashboard/workflow-repo/workflow-repo.scss
@@ -37,6 +37,7 @@
 
     .workflows-cont {
         border-bottom: 1px solid;
+        overflow: hidden;
     }
 
     .workflow {
