--- a/client/src/components/dashboard/workflows/workflow-header/workflow-heading.scss
+++ b/client/src/components/dashboard/workflows/workflow-header/workflow-heading.scss
@@ -124,6 +124,7 @@
         }
     }
     .row-info {
+        overflow: hidden;
         margin-top: 16px;
         padding: 5px 16px 5px 16px;
         align-items: center;
