--- a/client/src/components/dashboard/workflows/workflows.scss
+++ b/client/src/components/dashboard/workflows/workflows.scss
@@ -41,6 +41,7 @@ code:after, kbd:after, code:before, kbd:before {
 
     .workflows-cont {
         border-bottom: 1px solid;
+        overflow: hidden;
 
         .alert {
             margin: 20px;
